# datasnek

./: .gitignore  TODO.org  cabal.project  datasnek.cabal  flake.nix  justfile  settings.json
app/: Main.hs
claude-bot/: bot.py
src/: Api.hs  App.hs  BotManager.hs  Broadcast.hs  ChatManager.hs  Color.hs  Command.hs  CommandManager.hs  Css.hs  Datastar.hs  Favicon.hs  Game.hs  GameState.hs  GenUuid.hs  Html.hs  JavaScript.hs  MainPageManager.hs  Message.hs  Queue.hs  QueueManager.hs  Random.hs  RawSse.hs  RenderHtml.hs  Settings.hs  Sleep.hs  Snek.hs  SnekWebComponent.hs  Store.hs  StoreUpdate.hs  Types.hs  User.hs  WebComponents.hs
src/Bluefin/: Extra.hs  Once.hs  Proxy.hs  Servant.hs
src/Bluefin/Concurrent/: Local.hs
src/Lucid/: Datastar.hs
src/Servant/: HtmlRaw.hs
static/: snek-game-component.js  snek.css  window-controller.js
